# pjt

./: .ruff.toml  FUNCTION_REFERENCE.md  MANIFEST.ini  README.md  makefile  pyproject.toml  pytest.ini  setup.cfg  setup.py
github/workflows/: ci.yml
polars_jdbc_tools/: __init__.py  aws.py  database.py
src/: pjt.py
src/polars_jdbc_tools/: core.py
tests/: test_core.py
