[metadata]
name = polars_jdbc_tools
version = 0.1.0
description = A comprehensive toolkit for working with JDBC connections in AWS environments using Polars
long_description = file: README.md
long_description_content_type = text/markdown
author = mfilipelino
url = https://github.com/mfilipelino/pjt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.8
install_requires =
    boto3>=1.28.0
    polars>=0.18.0
    sqlalchemy>=2.0.0

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    ruff>=0.0.270

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*